# ChatBot

./: app.py  pyproject.toml  requirements.txt  vectordb_agent.py  web_agent.py
scripts/: data_ingestion.py
static/: style.css
templates/: index.html
